--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -263,167 +263,167 @@ spec:
                 requests:
                   storage: 50Mi
 
-    # prometheus-node-exporter dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus-node-exporter/values.yaml
-    prometheus-node-exporter:
+    # # prometheus-node-exporter dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus-node-exporter/values.yaml
+    # prometheus-node-exporter:
+    #   enabled: true
+    #   ## all values for prometheus-node-exporter helm chart can be specified here
+    #   podLabels:
+    #     ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
+    #     ##
+    #     jobLabel: node-exporter
+    #     extraArgs:
+    #       - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
+    #       - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+
+    #     vmServiceScrape:
+    #       # wheter we should create a service scrape resource for node-exporter
+    #       enabled: true
+
+    #       # spec for VMServiceScrape crd
+    #       # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+    #       spec:
+    #         jobLabel: jobLabel
+    #         endpoints:
+    #           - port: metrics
+    #             metricRelabelConfigs:
+    #               - action: drop
+    #                 source_labels: [mountpoint]
+    #                 regex: "/var/lib/kubelet/pods.+"
+
+    # # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+    # kube-state-metrics:
+    #   enabled: true
+
+    # # Add Kubelet scrape
+    # kubelet:
+    #   enabled: true
+    #   # -- Enable scraping /metrics/cadvisor from kubelet's service
+    #   cadvisor: true
+    #   # -- Enable scraping /metrics/probes from kubelet's service
+    #   probes: true
+    #   # spec for VMNodeScrape crd
+    #   # https://docs.victoriametrics.com/operator/api.html#vmnodescrapespec
+    #   spec:
+    #     scheme: "https"
+    #     honorLabels: true
+    #     interval: "30s"
+    #     scrapeTimeout: "5s"
+    #     tlsConfig:
+    #       insecureSkipVerify: true
+    #       caFile: "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
+    #     bearerTokenFile: "/var/run/secrets/kubernetes.io/serviceaccount/token"
+    #     # drop high cardinality label and useless metrics for cadvisor and kubelet
+    #     metricRelabelConfigs:
+    #       - action: labeldrop
+    #         regex: (uid)
+    #       - action: labeldrop
+    #         regex: (id|name)
+    #       - action: drop
+    #         source_labels: [__name__]
+    #         regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
+    #     relabelConfigs:
+    #       - action: labelmap
+    #         regex: __meta_kubernetes_node_label_(.+)
+    #       - sourceLabels: [__metrics_path__]
+    #         targetLabel: metrics_path
+    #       - targetLabel: "job"
+    #         replacement: "kubelet"
+    #     # ignore timestamps of cadvisor's metrics by default
+    #     # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
+    #     honorTimestamps: false
+
+    # Add Kubeapi scrape
+    kubeApiServer:
       enabled: true
-      ## all values for prometheus-node-exporter helm chart can be specified here
-      podLabels:
-        ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
-        ##
-        jobLabel: node-exporter
-        extraArgs:
-          - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
-          - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
-
-        vmServiceScrape:
-          # wheter we should create a service scrape resource for node-exporter
-          enabled: true
-
-          # spec for VMServiceScrape crd
-          # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-          spec:
-            jobLabel: jobLabel
-            endpoints:
-              - port: metrics
-                metricRelabelConfigs:
-                  - action: drop
-                    source_labels: [mountpoint]
-                    regex: "/var/lib/kubelet/pods.+"
-
-    # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
-    kube-state-metrics:
-      enabled: true
-
-    # Add Kubelet scrape
-    kubelet:
-      enabled: true
-      # -- Enable scraping /metrics/cadvisor from kubelet's service
-      cadvisor: true
-      # -- Enable scraping /metrics/probes from kubelet's service
-      probes: true
-      # spec for VMNodeScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmnodescrapespec
+      # spec for VMServiceScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
       spec:
-        scheme: "https"
-        honorLabels: true
-        interval: "30s"
-        scrapeTimeout: "5s"
-        tlsConfig:
-          insecureSkipVerify: true
-          caFile: "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
-        bearerTokenFile: "/var/run/secrets/kubernetes.io/serviceaccount/token"
-        # drop high cardinality label and useless metrics for cadvisor and kubelet
-        metricRelabelConfigs:
-          - action: labeldrop
-            regex: (uid)
-          - action: labeldrop
-            regex: (id|name)
-          - action: drop
-            source_labels: [__name__]
-            regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
-        relabelConfigs:
-          - action: labelmap
-            regex: __meta_kubernetes_node_label_(.+)
-          - sourceLabels: [__metrics_path__]
-            targetLabel: metrics_path
-          - targetLabel: "job"
-            replacement: "kubelet"
-        # ignore timestamps of cadvisor's metrics by default
-        # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
-        honorTimestamps: false
+        endpoints:
+          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+            # bearerTokenSecret:
+            #   key: ""
+            port: https
+            scheme: https
+            tlsConfig:
+              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              serverName: kubernetes
+        jobLabel: component
+        namespaceSelector:
+          matchNames:
+            - default
+        selector:
+          matchLabels:
+            component: apiserver
+            provider: kubernetes
 
-    # # Add Kubeapi scrape
-    # kubeApiServer:
-    #   enabled: true
-    #   # spec for VMServiceScrape crd
-    #   # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-    #   spec:
-    #     endpoints:
-    #       - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    #         # bearerTokenSecret:
-    #         #   key: ""
-    #         port: https
-    #         scheme: https
-    #         tlsConfig:
-    #           caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-    #           serverName: kubernetes
-    #     jobLabel: component
-    #     namespaceSelector:
-    #       matchNames:
-    #         - default
-    #     selector:
-    #       matchLabels:
-    #         component: apiserver
-    #         provider: kubernetes
+    # Add kubeControllerManager scrape
+    kubeControllerManager:
+      enabled: true
+      endpoints: &cp
+        - 192.168.108.149
+      service:
+        enabled: true
+        port: 10259
+        targetPort: 10259
+      spec:
+        jobLabel: jobLabel
+        endpoints:
+          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+            # bearerTokenSecret:
+            #   key: ""
+            port: http-metrics
+            scheme: https
+            tlsConfig:
+              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              serverName: kubernetes
 
-    # # Add kubeControllerManager scrape
-    # kubeControllerManager:
-    #   enabled: true
-    #   endpoints: &cp
-    #     - 192.168.108.149
-    #   service:
-    #     enabled: true
-    #     port: 10259
-    #     targetPort: 10259
-    #   spec:
-    #     jobLabel: jobLabel
-    #     endpoints:
-    #       - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-    #         # bearerTokenSecret:
-    #         #   key: ""
-    #         port: http-metrics
-    #         scheme: https
-    #         tlsConfig:
-    #           caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-    #           serverName: kubernetes
+    # -Component scraping kubeDns. Use either this or coreDns
+    kubeDns:
+      enabled: false
 
-    # # -Component scraping kubeDns. Use either this or coreDns
-    # kubeDns:
-    #   enabled: false
+    # -- Component scraping coreDns. Use either this or kubeDns
+    coreDns:
+      enabled: true
+      service:
+        enabled: true
+        port: 9153
+        targetPort: 9153
+        selector:
+          k8s-app: kube-dns
+      # spec for VMServiceScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+      spec:
+        jobLabel: jobLabel
+        endpoints:
+          - port: http-metrics
+            bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
 
-    # # -- Component scraping coreDns. Use either this or kubeDns
-    # coreDns:
-    #   enabled: true
-    #   service:
-    #     enabled: true
-    #     port: 9153
-    #     targetPort: 9153
-    #     selector:
-    #       k8s-app: kube-dns
-    #   # spec for VMServiceScrape crd
-    #   # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-    #   spec:
-    #     jobLabel: jobLabel
-    #     endpoints:
-    #       - port: http-metrics
-    #         bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    # Add kubeScheduler scrape
+    kubeScheduler:
+      enabled: false
+      # endpoints: *cp
+      # service:
+      #   enabled: true
+      #   port: 10259
+      #   targetPort: 10259
+      #
+      # spec:
+      #   endpoints:
+      #     - port: http-metrics
+      #       insecureSkipVerify: true
 
-    # # Add kubeScheduler scrape
-    # kubeScheduler:
-    #   enabled: false
-    #   # endpoints: *cp
-    #   # service:
-    #   #   enabled: true
-    #   #   port: 10259
-    #   #   targetPort: 10259
-    #   #
-    #   # spec:
-    #   #   endpoints:
-    #   #     - port: http-metrics
-    #   #       insecureSkipVerify: true
-
-    # # Add kubeEtcd scrape
-    # kubeEtcd:
-    #   enabled: true
-    #   endpoints: *cp
-    #   service:
-    #     enabled: true
-    #     port: 2381
-    #     targetPort: 2381
-    #   spec:
-    #     endpoints:
-    #       - port: http-metrics
-    #         scheme: http
+    # Add kubeEtcd scrape
+    kubeEtcd:
+      enabled: true
+      endpoints: *cp
+      service:
+        enabled: true
+        port: 2381
+        targetPort: 2381
+      spec:
+        endpoints:
+          - port: http-metrics
+            scheme: http
 
     # Enable deployment of grafana
     # I chose to deploy this seperately and manage it myself
