--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -105,22 +105,22 @@ go2rtc:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
       - "ffmpeg:gates_lq#video=copy#audio=aac"
     door_hq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=1_stream=0
       - "ffmpeg:door_hq#video=h264#audio=aac#hardware"
     door_lq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=1_stream=1
       - "ffmpeg:door_lq#video=h264#audio=aac#hardware"
     dvor_gates_hq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=1_stream=0
       - "ffmpeg:dvor_gates_hq#video=h264#audio=aac#hardware"
     dvor_gates_lq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=1_stream=1
       - "ffmpeg:dvor_gates_lq#video=h264#audio=aac#hardware"
     dom2_hq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=1_stream=0
       - "ffmpeg:dom2_hq#video=h264#audio=aac#hardware"
     dom2_lq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
+      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=1_stream=1
       - "ffmpeg:dom2_lq#video=h264#audio=aac#hardware"
   webrtc:
     candidates:
