--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -107,22 +107,22 @@ go2rtc:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
       - "ffmpeg:gates_lq#video=copy#audio=aac"
     door_hq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=1_stream=0
+      - rtsp://user:12332145@192.168.108.197:554/ch0_0
       - "ffmpeg:door_hq#video=h264#hardware#audio=aac"
     door_lq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=1_stream=1
+      - rtsp://user:12332145@192.168.108.197:554/ch0_1
       - "ffmpeg:door_lq#video=h264#hardware#audio=aac"
     dvor_gates_hq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=1_stream=0
+      - rtsp://user:12332145@192.168.108.150:554/ch0_0
       - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac"
     dvor_gates_lq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=1_stream=1
+      - rtsp://user:12332145@192.168.108.150:554/ch0_1
       - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac"
     dom2_hq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=1_stream=0
+      - rtsp://user:12332145@192.168.108.122:554/ch0_0
       - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac"
     dom2_lq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=1_stream=1
+      - rtsp://user:12332145@192.168.108.122:554/ch0_1
       - "ffmpeg:dom2_lq#video=h264#hardware#audio=aac"
   webrtc:
     candidates:
