--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -57,7 +57,7 @@ spec:
     networkPolicy:
       enabled: false
     metrics:
-      enabled: true
+      enabled: false
       serviceMonitor:
         enabled: true
         interval: 1m
