--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
           app:
             image:
               repository: docker.io/fallenbagel/jellyseerr
-              tag: develop
+              tag: 1.8.1@sha256:2f39c1872fad422d16df1c3a81b6cc42dd4ec6f8bfbca7f8ab5b07580d1f7817
             env:
               TZ: ${TIMEZONE}
               LOG_LEVEL: "info"
