--- a/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
@@ -28,14 +28,14 @@ radarr:
       - trash_ids:
           - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
         quality_profiles:
-          - name: Tuned-UHD
+          - name: SQP-2
             # score: 0 # Uncomment this line to disable prioritised IMAX Enhanced releases
 
       # Misc
       - trash_ids:
           - 2899d84dc9372de3408e6d8cc18e9666 # x264
         quality_profiles:
-          - name: Tuned-UHD
+          - name: SQP-2
             # score: 0 # Uncomment this line to enable x264 releases
 
       # Unwanted
@@ -48,7 +48,7 @@ radarr:
       # - trash_ids:
           # - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
         quality_profiles:
-          - name: Tuned-UHD
+          - name: SQP-2
 
       # Optional
       - trash_ids:
@@ -68,12 +68,12 @@ radarr:
           # - f537cf427b64c38c8e36298f657e4828 # Scene
           # - f700d29429c023a5734505e77daeaea7 # DV (Disk)
         quality_profiles:
-          - name: Tuned-UHD
+          - name: SQP-2
 
       - trash_ids:
           - 9c38ebb7384dada637be8899efa68e6f # SDR
         quality_profiles:
-          - name: Tuned-UHD
+          - name: SQP-2
             score: 0 # Uncomment this line to enable SDR releases
 
 sonarr:
