--- a/kubernetes/apps/media/flaresolverr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/flaresolverr/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -70,6 +70,7 @@ spec:
             port: *metricsPort
     serviceMonitor:
       main:
+        controller: main
         enabled: true
         endpoints:
           - port: metrics
