--- a/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -84,6 +84,7 @@ spec:
             supplementalGroups: [10000, 568]
     service:
       main:
+        controller: main
         ports:
           http:
             port: *port
@@ -99,14 +100,13 @@ spec:
             protocol: TCP
     ingress:
       main:
-        enabled: true
         className: internal
         hosts:
           - host: &host qb.${SECRET_DOMAIN}
             paths:
               - path: /
                 service:
-                  name: main
+                  identifier: main
                   port: http
         tls:
           - hosts:
