--- a/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
@@ -114,7 +114,7 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: qbittorrent
+        existingClaim: qbittorrent-config
       buffer:
         existingClaim: buffer
         globalMounts:
