--- a/kubernetes/apps/media/qbittorrent/app/pvc.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: qbittorrent
+  name: qbittorrent-config
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
