--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -132,7 +132,7 @@ spec:
             args: [
               "reannounce",
               "--process-seeding",
-              "--server", "qbittorrent",
+              "--server", "qbittorrent.media.svc.cluster.local",
               "--port", "8049"
             ]
             resources: *resources
