--- a/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/configs/recyclarr.yml
@@ -18,6 +18,11 @@ radarr:
 
     include:
       # Comment out any of the following includes to disable them
+      #1080
+      - template: radarr-quality-definition-sqp-streaming
+      - template: radarr-quality-profile-sqp-1-1080p
+      - template: radarr-custom-formats-sqp-1-1080p
+      #2160
       - template: radarr-quality-definition-sqp-uhd
       - template: radarr-quality-profile-sqp-2
       - template: radarr-custom-formats-sqp-2
