--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -150,7 +150,7 @@ spec:
                 - *hostinsert
     # VM Alerting (however, this just watches & passes alerts to prom-alertmanager below...)
     vmalert:
-      enabled: true
+      enabled: false
       spec:
         replicaCount: 2 # HA
         evaluationInterval: "60s"
