--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./scrapes/fluxmonitor.yaml
   # - ./scrapes/vmpodscrape.yaml
   - ./scrapes/servicescrape.yaml
-  - ./rules/oom.yaml
+  # - ./rules/oom.yaml
   - ./rules/victoria.yaml
   - ./rules/longhorn.yaml
