--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
   # - ./scrapes/vmpodscrape.yaml
   - ./scrapes/servicescrape.yaml
   # - ./rules/oom.yaml
-  - ./rules/victoria.yaml
-  - ./rules/longhorn.yaml
+  # - ./rules/victoria.yaml
+  # - ./rules/longhorn.yaml
