--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -9,7 +9,6 @@ metadata:
 spec:
   targetNamespace: observability
   dependsOn:
-    # - name: victoriametrics-crd
     - name: longhorn
   path: "./kubernetes/apps/observability/victoria-metrics/app/"
   prune: true
@@ -23,3 +22,28 @@ spec:
   postBuild:
     substitute:
       APP: *app
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: victoriametrics-custom
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  targetNamespace: observability
+  dependsOn:
+    - name: victoriametrics
+  path: "./kubernetes/apps/observability/victoria-metrics/custom/"
+  prune: true
+  wait: false
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+  postBuild:
+    substitute:
+      APP: *app
+
