--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: victoriametrics-custom
+  name: &app victoriametrics-custom
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
