--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -129,3 +129,10 @@ spec:
         globalMounts:
           - path: /root/.ssh/id_rsa
             subPath: GITHUB_DEPLOY_KEY
+      known-hosts:
+        type: secret
+        name: hass-secrets
+        defaultMode: 256
+        globalMounts:
+          - path: /root/.ssh/known_hosts
+            subPath: GITHUB_KNOWN_HOSTS
